feat: polishing + favicon + otp + account screen
